--- a/src/main/resources/templates/articles/read.html
+++ b/src/main/resources/templates/articles/read.html
@@ -3,31 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>[[${article.title}]]</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <h1>[[${article.title}]]</h1>
-<a href="/boards">Back to Boards</a>
+<a th:href="@{/articles/{id}/delete (id=${article.id})}">Delete</a>
+<p>
+    <a th:unless="${before == null}" th:href="@{/articles/{id} (id=${before},board=${board})}">이전글</a>
+    <a th:unless="${after == null}" th:href="@{/articles/{id} (id=${after},board=${board})}">다음글</a>
+    <a th:if="${board == 0}" href="/boards">뒤로가기</a>
+    <a th:unless="${board == 0}" th:href="@{/boards/{board}(board=${board})}">뒤로가기</a>
+    <a th:href="@{/articles/{id}/update(id=${article.id})}">수정하기</a>
+</p>
 <p>
     [[${article.content}]]
 </p>
-<a th:href="@{/articles/{id}/update (id=${article.id})}">Update</a>
-<a th:href="@{/articles/{id}/delete (id=${article.id})}">Delete</a>
+
+
 <hr>
 <!-- 게시글 영역 -->
 <hr>
 <h2>Comments</h2>
 <!-- 댓글 작성 영역 -->
-<form th:action="@{/articles/{id}/comments/create (id=${article.id})}" method="post">
+<form th:action="@{/articles/{id}/comments (id=${article.id})}" method="post">
     <div>
-        <label for="comment-input">Comment:</label>
-        <input type="text" id="comment-input" name="content">
+        <label for="content-input">Content:</label>
+        <input type="text" id="content-input" name="content">
     </div>
     <div>
-        <label for="writer-input">Writer:</label>
-        <input type="text" id="writer-input" name="writer">
+        <label for="password-input">Password:</label>
+        <input type="password" id="password-input" name="password">
     </div>
-    <input type="submit" value="Writer Comment">
+    <input type="submit" value="Write Comment">
 </form>
+
 <!-- 댓글 표시 영역 -->
 <!-- 댓글이 없을 경우 -->
 <div th:if="${article.comments.isEmpty()}">
@@ -38,7 +47,18 @@
         th:unless="${article.comments.isEmpty()}"
         th:each="comment: ${article.comments}"
 >
-    <p>[[${comment.writer}]]: [[${comment.content}]]</p>
+    <h5 class="me-3">익명</h5>
+    <div class="d-flex">
+        <form class="d-flex align-items-center" th:action="@{/articles/{aId}/comments/{cId}/delete(aId=${article.id},cId=${comment.id})}" method="post">
+            <input type="password" name="password" class="form-control me-2" placeholder="비밀번호">
+            <input type="submit" class="btn btn-danger" value="삭제하기">
+        </form>
+    </div>
+    <p>[[${comment.id}]]. [[${comment.content}]]</p>
+
 </div>
+
+<hr>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
