--- a/src/main/resources/templates/boards/read.html
+++ b/src/main/resources/templates/boards/read.html
@@ -2,18 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello</title>
+    <title>[[${board.name}]]</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <h1>[[${board.name}]]</h1>
-<ul>
-    <li th:each="article: ${articles}">
-        <a th:href="@{/articles/{articleId}(articleId=${article.Id})}">[[${article.id}]]. [[${article.title}]]</a>
-    </li>
-</ul>
+<a href="/articles/create" class="btn btn-primary mb-4">Write an Article</a></div>
+<h2 th:if="${articles.isEmpty()}"> No Articles</h2>
+<table th:unless="${articles.isEmpty()}" class="table">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Title</th>
 
-
-
-
+    </tr>
+    <tbody>
+    <tr th:each="article : ${articles}">
+        <th scope="col" th:text="${article.id}"></th>
+        <th scope="col">
+            <a th:href="@{/articles/{articleId}(articleId=${article.id},board=${board.id})}" th:text="${article.title}"></a>
+        </th>
+    </tr>
+    </tbody>
+    </thead>
+</table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
