--- a/src/main/resources/templates/boards/boards.html
+++ b/src/main/resources/templates/boards/boards.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Boards</title>
+    <title th:if="${selected == null}"> Boards</title>
+    <title th:if="${selected!=null}">[[${selected.name}]] </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<a href="/boards">전체 게시판</a>
-      <a th:each="board : ${boards}"
-         th:href="@{/boards/{boardId}(boardId=${board.id})}"
-         th:text="${board.name}"></a>
+<div class="d-flex justify-content-between">
+        <a href="/boards">전체 게시판</a>
+        <a th:each="board : ${boards}"
+           th:href="@{/boards/{boardId}(boardId=${board.id})}"
+           class="me-3">[[${board.name}]]</a>
+</div>
+<div>
+    <form action="/articles/search" method="get">
+        <input type="text" name="q" placeholder="검색어">
+        <input th:unless="${selected == null}" type="hidden" name="board-id" th:value="${selected.id}">
+        <select name="criteria">
+            <option selected value="title">제목</option>
+            <option value="content">내용</option>
+        </select>
+        <input type="submit" value="검색하기">
+
+    </form>
+</div>
 <div class="container mt-4">
     <h1 class="mb-4">전체 게시판</h1>
     <a href="/articles/create" class="btn btn-primary mb-4">Write an Article</a></div>
