--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>[[${board.name}]]</title>
+    <title>검색 결과</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
-<body>
-<h1>[[${board.name}]]</h1>
-<div>
+<body clas="p-3">
+<div class="d-flex justify-content-between">
+    <h1 th:if="${boardName == null}">전체에서 [[${criteria}]]으로 "[[${query}]]" 검색결과</h1>
+    <h1 th:unless="${boardName == null}">[[${boardName}]]에서 [[${criteria}]]으로 "[[${query}]]" 검색결과</h1>
+
+<div class="d-flex align-items-center">
     <form action="/articles/search" method="get">
         <input type="text" name="q" placeholder="검색어">
         <input th:unless="${selected == null}" type="hidden" name="board-id" th:value="${selected.id}">
@@ -16,28 +20,33 @@
             <option value="content">내용</option>
         </select>
         <input type="submit" value="검색하기">
-
     </form>
 </div>
-<a href="/articles/create" class="btn btn-primary mb-4">Write an Article</a></div>
-<h2 th:if="${articles.isEmpty()}"> No Articles</h2>
+</div>
+<hr>
+<h2 th:if="${articles.isEmpty()}">
+    No Articles
+</h2>
 <table th:unless="${articles.isEmpty()}" class="table">
     <thead>
     <tr>
         <th scope="col">#</th>
         <th scope="col">Title</th>
-
+        <th scope="col">Board</th>
     </tr>
     <tbody>
     <tr th:each="article : ${articles}">
         <th scope="col" th:text="${article.id}"></th>
         <th scope="col">
-            <a th:href="@{/articles/{articleId}(articleId=${article.id},board=${board.id})}" th:text="${article.title}"></a>
+            <a th:href="@{/articles/{articleId}(articleId=${article.id})}" th:text="${article.title}"></a>
         </th>
+        <th scope="col" th:text="${article.board.name}"></th>
     </tr>
     </tbody>
     </thead>
 </table>
+<hr>
+<a href="/boards">돌아가기</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
